[gd_scene load_steps=11 format=2]

[ext_resource path="res://Art/backgroundColorGrass.png" type="Texture" id=1]
[ext_resource path="res://Misc/UI.tres" type="Theme" id=2]
[ext_resource path="res://Misc/LineFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://Scenes/Multiplayer.gd" type="Script" id=4]
[ext_resource path="res://Scenes/Game.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/BetweenGame.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/ErrorMessage.gd" type="Script" id=7]
[ext_resource path="res://Art/vector_blackIcons.svg" type="Texture" id=8]
[ext_resource path="res://Scenes/Mute.gd" type="Script" id=9]
[ext_resource path="res://Art/text2060.png" type="Texture" id=10]

[node name="Control2" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="HostAndJoin" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HBoxContainer" type="HBoxContainer" parent="HostAndJoin"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 12.0
margin_right = -1.0
margin_bottom = 12.0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="HostAndJoin/HBoxContainer"]
margin_left = 70.0
margin_right = 248.0
margin_bottom = 176.0
alignment = 1

[node name="Control" type="Control" parent="HostAndJoin/HBoxContainer/VBoxContainer"]
margin_top = 34.0
margin_right = 178.0
margin_bottom = 34.0

[node name="ErrorMessage" type="Label" parent="HostAndJoin/HBoxContainer/VBoxContainer"]
margin_top = 38.0
margin_right = 178.0
margin_bottom = 56.0
grow_horizontal = 0
theme = ExtResource( 2 )
text = "Multiplayer:"
align = 1
valign = 2
autowrap = true
script = ExtResource( 7 )
__meta__ = {
"_edit_lock_": true
}

[node name="LobbyName" type="LineEdit" parent="HostAndJoin/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 60.0
margin_right = 178.0
margin_bottom = 85.0
theme = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 3 )
max_length = 12
placeholder_text = "Lobby Name"

[node name="HBoxContainer" type="HBoxContainer" parent="HostAndJoin/HBoxContainer/VBoxContainer"]
margin_top = 89.0
margin_right = 178.0
margin_bottom = 109.0

[node name="Host" type="Button" parent="HostAndJoin/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_right = 85.0
margin_bottom = 20.0
rect_min_size = Vector2( 85, 0 )
theme = ExtResource( 2 )
text = "Host"

[node name="Control" type="Control" parent="HostAndJoin/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 89.0
margin_right = 89.0
margin_bottom = 20.0

[node name="Join" type="Button" parent="HostAndJoin/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 93.0
margin_right = 178.0
margin_bottom = 20.0
rect_min_size = Vector2( 85, 0 )
theme = ExtResource( 2 )
text = "Join"

[node name="Control2" type="Control" parent="HostAndJoin/HBoxContainer/VBoxContainer"]
margin_top = 113.0
margin_right = 178.0
margin_bottom = 113.0

[node name="Control3" type="Control" parent="HostAndJoin/HBoxContainer/VBoxContainer"]
margin_top = 117.0
margin_right = 178.0
margin_bottom = 117.0

[node name="Join2" type="Button" parent="HostAndJoin/HBoxContainer/VBoxContainer"]
margin_top = 121.0
margin_right = 178.0
margin_bottom = 141.0
rect_min_size = Vector2( 85, 0 )
theme = ExtResource( 2 )
text = "Tutorial"

[node name="Text2060" type="Sprite" parent="HostAndJoin"]
position = Vector2( 158, 42.0018 )
rotation = 0.0436332
scale = Vector2( 0.100552, 0.100548 )
texture = ExtResource( 10 )

[node name="BackgroundColorGrass" type="Sprite" parent="."]
modulate = Color( 0.737255, 0.737255, 0.737255, 1 )
position = Vector2( 160, 88 )
scale = Vector2( 0.2, 0.2 )
z_index = -10
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 0, 0, 1600, 880 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="ErrorMessage" type="Label" parent="."]
unique_name_in_owner = true
anchor_right = 1.0
margin_top = 2.0
margin_bottom = 174.0
grow_horizontal = 0
theme = ExtResource( 2 )
align = 1
valign = 2
autowrap = true
script = ExtResource( 7 )

[node name="Waiting" type="Label" parent="."]
unique_name_in_owner = true
visible = false
anchor_right = 1.0
margin_top = 2.0
margin_bottom = 174.0
grow_horizontal = 0
theme = ExtResource( 2 )
text = "Waiting for 
other player..."
align = 1
valign = 1
autowrap = true

[node name="ChooseDie" parent="." instance=ExtResource( 6 )]
visible = false

[node name="Game" parent="." instance=ExtResource( 5 )]
unique_name_in_owner = true
visible = false
p1_moves = [ [ "", "" ], [ "", "" ], [ "", "" ] ]

[node name="VectorBlackIcons" type="Sprite" parent="."]
position = Vector2( 13, 13 )
scale = Vector2( 0.125, 0.125 )
texture = ExtResource( 8 )
hframes = 15
vframes = 7
frame = 49
script = ExtResource( 9 )

[node name="Button" type="Button" parent="VectorBlackIcons"]
modulate = Color( 1, 1, 1, 0 )
margin_left = -125.0
margin_top = -120.0
margin_right = 120.0
margin_bottom = 130.0

[connection signal="pressed" from="HostAndJoin/HBoxContainer/VBoxContainer/HBoxContainer/Host" to="." method="host"]
[connection signal="pressed" from="HostAndJoin/HBoxContainer/VBoxContainer/HBoxContainer/Join" to="." method="join"]
[connection signal="pressed" from="HostAndJoin/HBoxContainer/VBoxContainer/Join2" to="." method="tutorial"]
[connection signal="button_down" from="VectorBlackIcons/Button" to="VectorBlackIcons" method="mute"]
